after adding passport_1

--- a/public/html/add-user.html
+++ b/public/html/add-user.html
@@ -23,31 +23,31 @@
                             <div class="card-text">
 
                             </div>
-                            <form class="form">
+                            <form class="form" method="post" action="/add-user">
                                 <div class="form-body">
                                     <h4 class="form-section"><i class="icon-user-tie"></i> User Info</h4>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput1">First Name</label>
-                                                <input type="text" id="projectinput1" class="form-control" placeholder="First Name" name="fname">
+                                                <input type="text" id="projectinput1" class="form-control" placeholder="First Name" name="name">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="projectinput2">Last Name</label>
-                                                <input type="text" id="projectinput12" class="form-control" placeholder="Last Name" name="lname">
+                                                <input type="text" id="projectinput12" class="form-control" placeholder="Last Name" name="username">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                     <div class="col-md-6"><div class="form-group">
                                         <label for="projectinput2">Password</label>
-                                        <input type="password" id="projectinput112" class="form-control" placeholder="Last Name" name="lname">
+                                        <input type="password" id="projectinput112" class="form-control" placeholder="Last Name" name="password">
                                     </div></div>
                                     <div class="col-md-6"><div class="form-group">
                                         <label for="projectinput2">Repeat Password</label>
-                                        <input type="password" id="projectinput2" class="form-control" placeholder="Last Name" name="lname">
+                                        <input type="password" id="projectinput2" class="form-control" placeholder="Last Name" name="password2">
                                     </div></div>
                                     </div>
                                     <hr/>
