add user from Add-user.pug

--- a/public/html/add-user.html
+++ b/public/html/add-user.html
@@ -29,25 +29,25 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">First Name</label>
-                                                <input type="text" id="projectinput1" class="form-control" placeholder="First Name" name="name">
+                                                <label for="projectinput1">Account Name</label>
+                                                <input type="text" id="projectinput1" class="form-control" placeholder="Account Name" name="name">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Last Name</label>
-                                                <input type="text" id="projectinput12" class="form-control" placeholder="Last Name" name="username">
+                                                <label for="projectinput2">Username</label>
+                                                <input type="text" id="projectinput12" class="form-control" placeholder="Username" name="username">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                     <div class="col-md-6"><div class="form-group">
                                         <label for="projectinput2">Password</label>
-                                        <input type="password" id="projectinput112" class="form-control" placeholder="Last Name" name="password">
+                                        <input type="password" id="projectinput112" class="form-control" placeholder="Password" name="password">
                                     </div></div>
                                     <div class="col-md-6"><div class="form-group">
                                         <label for="projectinput2">Repeat Password</label>
-                                        <input type="password" id="projectinput2" class="form-control" placeholder="Last Name" name="password2">
+                                        <input type="password" id="projectinput2" class="form-control" placeholder="Repeat Password" name="password2">
                                     </div></div>
                                     </div>
                                     <hr/>
