--- a/public/html/add-user.html
+++ b/public/html/add-user.html
@@ -29,13 +29,13 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput1">Account Name</label>
-                                                <input type="text" id="projectinput1" class="form-control" placeholder="Account Name" name="name">
+                                                <label for="projectinput1">Account Name | <span dir="ltr" class="text-muted">e.g علي محمد</span></label>
+                                                <input type="text" id="projectinput1" class="form-control" placeholder="علي محمد" name="name">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label for="projectinput2">Username</label>
+                                                <label for="projectinput2">Username | <span dir="ltr" class="text-muted">e.g Ali</span></label>
                                                 <input type="text" id="projectinput12" class="form-control" placeholder="Username" name="username">
                                             </div>
                                         </div>
